# loreshifter

./: .dockerignore  .gitignore  README.md  debug-compose.yaml
LoreshifterBackend/: Dockerfile  LoreshifterBackend.csproj  Program.cs  dev.Dockerfile
backend/: Dockerfile  Dockerfile.test  README.md  config.py  docker-compose.test.yaml  main.py  pyproject.toml
backend/app/: api_error.py  auth.py  dependencies.py  entrypoint.py  game.py  logger.py  main.py  play.py  rate_limit.py  user.py  world.py  ws.py
backend/events/: chat.py
backend/game/: Player.py  chat.py  game.py  inference.py  logger.py  logic.py  message.py  system.py  universe.py  user.py  utils.py  world.py
backend/lstypes/: chat.py  error.py  game.py  message.py  player.py  user.py  utils.py  world.py
backend/static/: playtest.html
backend/tests/: __init__.py  conftest.py  db.py  service.py
backend/tests/game/: test_chat.py  test_game.py  test_user.py  test_world.py  test_ws_aiohttp.py
backend/tests/integration/: disabled_test_integration_game.py  test_http_status_codes.py  test_integration_game.py  test_integration_world.py
backend/tests/tools/: test_converters.py  test_lua_runner.py  test_process_runner.py  test_process_runner_async.py  test_tool_manager.py
backend/tooling/: converters.py  lua_runner.py  process_runner.py  tool_manager.py  worker_process.py
backend/types/: chat.py  game.py  world.py
db/: Dockerfile  Dockerfile.dev  debug-compose.yaml  migrate.sh  wrapper.sh
deploy/: ansible-playbook.yaml  docker-compose-production.yml  docker-compose.yml  nginx.conf
docs/: api.md  (+5 more)
(+144 files in other folders)
